Fix spacing in baneado hasta

--- a/src/subtitulamos/resources/assets/css/user.scss
+++ b/src/subtitulamos/resources/assets/css/user.scss
@@ -32,7 +32,8 @@
         align-items: center;
 
         button,
-        a {
+        a,
+        b {
           margin-left: var(--spacing-xxs);
         }
       }
